Fix border color not black in dark mode

--- a/LibraryFrontend/src/components/ContentView/BorrowingHistory/BorrowingHistory.css
+++ b/LibraryFrontend/src/components/ContentView/BorrowingHistory/BorrowingHistory.css
@@ -16,7 +16,7 @@
 .borrowing-history table,
 th,
 td {
-  border: 1px solid black;
+  border: 1px solid;
   border-collapse: collapse;
 }
 
